Fix spilling bullets on slideshow spinner

--- a/scanblog/static/css/sass/_common.sass
+++ b/scanblog/static/css/sass/_common.sass
@@ -622,7 +622,9 @@ a.logo
     width: 100%
     li
       float: left
-      width: 3em
+      width: 14%
+      margin: 0
+      padding: 0
       display: block
       text-align: center
       &.current
